--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -59,6 +59,7 @@
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "chromedriver": "^112.0.0",
+    "cross-dirname": "^0.1.0",
     "delay": "^5.0.0",
     "express": "^4.18.2",
     "mocha": "^10.0.0",
