fix(react): include .mjs file in publish

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,6 +20,7 @@
     "dist/cache.d.ts",
     "dist/cache.js.map",
     "dist/index.js",
+    "dist/index.mjs",
     "dist/index.d.ts",
     "dist/index.js.map"
   ],
