--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -50,9 +50,6 @@
   "dependencies": {
     "axe-core": "^4.7.0"
   },
-  "peerDependencies": {
-    "@playwright/test": ">= 1.0.0"
-  },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
     "@types/chai": "^4.3.3",
@@ -70,6 +67,9 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "playwright-core": ">= 1.0.0"
   },
   "nyc": {
     "include": [
