--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -51,6 +51,7 @@
     "axe-core": "^4.7.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.34.3",
     "@types/chai": "^4.3.3",
     "@types/express": "^4.17.14",
     "@types/mocha": "^10.0.0",
@@ -61,8 +62,6 @@
     "express": "^4.18.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "playwright": "^1.29.0",
-    "playwright-core": "^1.29.0",
     "rimraf": "^3.0.2",
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
@@ -70,7 +69,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "playwright": ">= 1.0.0"
+    "playwright-core": ">= 1.0.0"
   },
   "nyc": {
     "include": [
