--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
-    "test": "mocha 'test/**/*.test.ts'",
-    "test:esm": "node esmTest.mjs",
+    "test": "mocha --timeout 60000 -r ts-node/register 'test/**.spec.ts'",
+    "test:esm": "node test/esmTest.mjs",
     "coverage": "nyc npm run test",
     "prepublishOnly": "npm run build"
   },
