chore: cleanup webdriverjs tests and deps

--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -69,26 +69,18 @@
     "@types/chai": "^4.3.3",
     "@types/chromedriver": "^81.0.1",
     "@types/express": "^4.17.14",
-    "@types/http-server": "^0.12.1",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.8.3",
     "@types/selenium-webdriver": "^4.1.5",
-    "@types/sinon": "^10.0.13",
     "@types/test-listen": "^1.1.0",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
-    "chaimocha": "^1.10.0",
-    "chromedriver": "^113.0.0",
-    "delay": "^5.0.0",
+    "chromedriver": "latest",
     "express": "^4.18.2",
-    "expresss": "^0.0.0",
-    "http-server": "^14.1.1",
-    "is-ci": "^3.0.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "selenium-webdriver": "^4.8.1",
-    "sinon": "^14.0.1",
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
