ci: auto-patch-release from public repo

--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -5,9 +5,16 @@ on:
     - cron: '59 23 * * 5'
 jobs:
   create_patch_release:
-    uses: dequelabs/axe-api-team/.github/workflows/auto-patch-release.yml
-    secrets: inherit
-    with:
-      release-command: bash .github/scripts/prepare_release.sh
-      release-branch: master
-      default-branch: develop
+    name: Create release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create release
+        uses: dequelabs/axe-api-team-public/.github/actions/auto-patch-release-v1@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          project_token: ${{ secrets.GH_PROJECT_TOKEN }}
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
+          odd_release: 'true'
+          release-command: bash .github/scripts/prepare_release.sh
+          release-branch: master
+          default-branch: develop
