--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -142,9 +142,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
       - run: npm run build --prefix=packages/playwright
-      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
-      - shell: 'script -q -e -c "bash {0}"'
-        run: npx browser-driver-manager install chrome chromedriver --verbose
+      - run: npx playwright install
       - run: npm run coverage --prefix=packages/playwright
       - run: npm run test:esm --prefix=packages/playwright
 
