--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,19 +13,22 @@ jobs:
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - run: npm ci
       - run: npm run bootstrap -- --ci
       - run: npm run lint
 
   puppeteer:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node}}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -38,13 +41,16 @@ jobs:
       - run: npm run test:esm --prefix=packages/puppeteer
 
   cli:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -60,13 +66,16 @@ jobs:
       - run: npm run coverage --prefix=packages/cli
 
   webdriverjs:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -79,13 +88,16 @@ jobs:
       - run: npm run test:esm --prefix=packages/webdriverjs
 
   webdriverio:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -98,13 +110,16 @@ jobs:
       - run: npm run test:esm --prefix=packages/webdriverio
 
   reporter_earl:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -114,13 +129,16 @@ jobs:
       - run: npm run test:esm --prefix=packages/reporter-earl
 
   react:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -130,13 +148,16 @@ jobs:
       - run: npm run test:esm --prefix=packages/react
 
   playwright:
+    strategy:
+      matrix:
+        node: [16, 18, 20]
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
@@ -148,6 +169,7 @@ jobs:
       - run: npm run coverage --prefix=packages/playwright
       - run: npm run test:esm --prefix=packages/playwright
 
+  # TODO: only run on master and release* branches.
   axe_core_test:
     runs-on: ubuntu-latest
     needs: lint
@@ -155,7 +177,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
