build: Lint and format all files

--- a/packages/react/.babelrc
+++ b/packages/react/.babelrc
@@ -3,9 +3,9 @@
     [
       "@babel/preset-env",
       {
-        targets: {
-          node: 'current',
-        },
+        "targets": {
+          "node": "current"
+        }
       }
     ],
     "@babel/preset-react"
