--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -50,8 +50,8 @@ jobs:
           branch: release
           branch-suffix: timestamp
           base: master
-          title: "chore: release v${{ steps.get-new-version.outputs.version }}"
+          title: 'chore: release v${{ steps.get-new-version.outputs.version }}'
           # If there are any changes not already committed, they will be added to
           # a commit with this as the message.
           # If there are no changes no commit will be created.
-          commit-message: "chore: applying release changes"
+          commit-message: 'chore: applying release changes'
