--- a/.github/workflows/sync-master-develop.yml
+++ b/.github/workflows/sync-master-develop.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: dequelabs/action-sync-branches@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          pr-title: "chore: merge master into develop"
+          pr-title: 'chore: merge master into develop'
           pr-reviewers: michael-siek,stephenmathieson
           pr-labels: chore
           pr-template: .github/PULL_REQUEST_TEMPLATE.md
