--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -1,8 +1,9 @@
 name: Automatically create patch release every 2 weeks
 on:
-  schedule:
-    # Run every Friday right before midnight
-    - cron: '59 23 * * 5'
+  pull_request:
+  # schedule:
+  #   # Run every Friday right before midnight
+    # - cron: '59 23 * * 5'
 jobs:
   create_patch_release:
     name: Create release
