--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run bootstrap
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
       - run: |
@@ -40,10 +39,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run bootstrap
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
       - run: |
