--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -1,8 +1,6 @@
 name: Automatically create patch release every 2 weeks
 on:
-  schedule:
-    # Run every Thurdsay right before midnight
-    - cron: '59 23 * * 4'
+  pull_request
 jobs:
   create_patch_release:
     name: Create release
