--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -1,6 +1,8 @@
 name: Automatically create patch release every 2 weeks
 on:
-  pull_request
+  schedule:
+    # Run every Thursday right before midnight
+    - cron: '59 23 * * 4'
 jobs:
   create_patch_release:
     name: Create release
@@ -15,4 +17,4 @@ jobs:
           odd_release: 'true'
           release-command: bash .github/scripts/prepare_release.sh
           release-branch: master
-          default-branch: ci-patch-thrusday
+          default-branch: develop
