--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 name: Tests
 
-on: [push]
+on: push:
+    branches:
+      - "**" # all branches
+      - "!master" # except master
+      - "!develop" # except develop
 
 jobs:
   lint:
