revert push changes and update chromedriver to 115

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,20 +1,11 @@
 name: Tests
 
-on:
-  push:
-    branches:
-      - "**" # all branches
-      - "!master" # except master
-      - "!develop" # except develop
-
-env:
-  # Point tests to run from newest stable chromedriver
-  CHROMEDRIVER_PATH: /usr/local/bin/chromedriver
+on: [push]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -30,6 +21,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -51,6 +43,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -75,6 +68,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -96,6 +90,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -117,6 +112,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -135,6 +131,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -153,6 +150,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
@@ -170,6 +168,7 @@ jobs:
   axe_core_test:
     if: github.ref_name == 'master' || startsWith(github.ref_name, 'release')
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
