--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,10 +60,9 @@
     "chai": "^4.3.6",
     "execa": "5.1.0",
     "mocha": "^10.0.0",
-    "mock-fs": "^5.1.4",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "tempy": "1.0.0",
+    "tempy": "^1.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
