--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v3
+      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node}}
@@ -30,9 +31,6 @@ jobs:
       - run: npm ci
       - run: npm run bootstrap -- --ci
       - run: npm run build --prefix=packages/puppeteer
-      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
-      - shell: 'script -q -e -c "bash {0}"'
-        run: npx browser-driver-manager install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/puppeteer
       - run: npm run test:esm --prefix=packages/puppeteer
 
@@ -44,15 +42,13 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v3
+      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - run: npm ci
       - run: npm run bootstrap -- --ci
-      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
-      - shell: 'script -q -e -c "bash {0}"'
-        run: npx browser-driver-manager install chrome chromedriver --verbose
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
       # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
@@ -68,15 +64,13 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v3
+      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - run: npm ci
       - run: npm run bootstrap -- --ci
-      # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
-      - shell: 'script -q -e -c "bash {0}"'
-        run: npx browser-driver-manager install chrome chromedriver --verbose
       - run: npm run build --prefix=packages/webdriverjs
       - run: npm run coverage --prefix=packages/webdriverjs
       - run: npm run test:esm --prefix=packages/webdriverjs
@@ -96,9 +90,6 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run bootstrap -- --ci
-      # # HACK: Force a TTY to enable browser-driver-manager to manipulate stdout.
-      # - shell: 'script -q -e -c "bash {0}"'
-      #   run: npx browser-driver-manager install chrome chromedriver --verbose
       - run: npm run build --prefix=packages/webdriverio
       - run: npm run coverage --prefix=packages/webdriverio
       - run: npm run test:esm --prefix=packages/webdriverio
