--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,9 @@ name: Tests
 
 on: [push]
 
+env:
+  CHROMEDRIVER_PATH: /usr/local/bin/chromedriver
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -15,46 +18,46 @@ jobs:
       - run: npm run bootstrap -- --ci
       - run: npm run lint
 
-  puppeteer:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node}}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/puppeteer
-      - run: npm run coverage --prefix=packages/puppeteer
-      - run: npm run test:esm --prefix=packages/puppeteer
+  # puppeteer:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node}}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/puppeteer
+  #     - run: npm run coverage --prefix=packages/puppeteer
+  #     - run: npm run test:esm --prefix=packages/puppeteer
 
-  cli:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      # Re-build packages, ensuring packages/webdriverjs/dist exists.
-      - run: npx lerna run prepare
-      # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
-      - run: npx lerna link
-        working-directory: packages/cli
-      - run: npm run coverage --prefix=packages/cli
+  # cli:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: nanasess/setup-chromedriver@385569491959c73b57962734dc5c3c4998e96353
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     # Re-build packages, ensuring packages/webdriverjs/dist exists.
+  #     - run: npx lerna run prepare
+  #     # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
+  #     - run: npx lerna link
+  #       working-directory: packages/cli
+  #     - run: npm run coverage --prefix=packages/cli
 
   webdriverjs:
     strategy:
@@ -94,71 +97,71 @@ jobs:
       - run: npm run coverage --prefix=packages/webdriverio
       - run: npm run test:esm --prefix=packages/webdriverio
 
-  reporter_earl:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/reporter-earl
-      - run: npm run test --prefix=packages/reporter-earl
-      - run: npm run test:esm --prefix=packages/reporter-earl
+  # reporter_earl:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/reporter-earl
+  #     - run: npm run test --prefix=packages/reporter-earl
+  #     - run: npm run test:esm --prefix=packages/reporter-earl
 
-  react:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm run build --prefix=packages/react
-      - run: npm run test --prefix=packages/react
-      - run: npm run test:esm --prefix=packages/react
+  # react:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm run build --prefix=packages/react
+  #     - run: npm run test --prefix=packages/react
+  #     - run: npm run test:esm --prefix=packages/react
 
-  playwright:
-    strategy:
-      matrix:
-        node: [16, 18, 20]
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npx playwright install --with-deps
-      - run: npm run build --prefix=packages/playwright
-      - run: npm run coverage --prefix=packages/playwright
-      - run: npm run test:esm --prefix=packages/playwright
+  # playwright:
+  #   strategy:
+  #     matrix:
+  #       node: [16, 18, 20]
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npx playwright install --with-deps
+  #     - run: npm run build --prefix=packages/playwright
+  #     - run: npm run coverage --prefix=packages/playwright
+  #     - run: npm run test:esm --prefix=packages/playwright
 
-  axe_core_test:
-    if: github.ref_name == 'master' || startsWith(github.ref_name, 'release')
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run bootstrap -- --ci
-      - run: npm test --prefix=axe_core_test
+  # axe_core_test:
+  #   if: github.ref_name == 'master' || startsWith(github.ref_name, 'release')
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - run: npm run bootstrap -- --ci
+  #     - run: npm test --prefix=axe_core_test
