--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@axe-core/webdriverjs": "^4.7.3",
     "axe-core": "^4.7.0",
-    "chromedriver": "^115.0.1",
+    "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
     "selenium-webdriver": "^4.8.1"
