refactor: put non-package specific tests in own dir (#799)
* refactor: put non-pacakge specific tests in own dir

* dont run release

* lerna new dir

* fix lerna

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "packages/*",
     "packages/react/examples/*",
     "packages/webdriverjs/tests/example",
-    "axe_core_test"
+    "test/axe-core"
   ],
   "version": "4.7.3"
 }
